--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,27 @@
-test:
-  stage: test
+stages:
+- install
+- test
+
+install-py36:
+  stage: install
   image: python:3.6
   script:
     - python3 setup.py install
-    # - python3 setup.py test
 
+install-py37:
+  stage: install
+  image: python:3.7
+  script:
+    - python3 setup.py install
+
+test-py36:
+  stage: test
+  image: python:3.6
+  script:
+    - python3 setup.py test
+
+test-py37:
+  stage: test
+  image: python:3.7
+  script:
+    - python3 setup.py test
