--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,11 @@
-stages:
-- install
-- test
-
-install-py36:
-  stage: install
+build-py36:
+  stage: build
   image: python:3.6
   script:
     - python3 setup.py install
 
-install-py37:
-  stage: install
+build-py37:
+  stage: build
   image: python:3.7
   script:
     - python3 setup.py install
