--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,14 +10,14 @@ build-py37:
   script:
     - python3 setup.py install
 
-test-py36:
-  stage: test
-  image: python:3.6
-  script:
-    - python3 setup.py test
+#test-py36:
+#  stage: test
+#  image: python:3.6
+#  script:
+#    - python3 setup.py test
 
-test-py37:
-  stage: test
-  image: python:3.7
-  script:
-    - python3 setup.py test
+#test-py37:
+#  stage: test
+#  image: python:3.7
+#  script:
+#    - python3 setup.py test
